2009-09-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/DomTests.cs: Added assembly uri string
	  from marek to the unit tests.

2009-09-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/DomTests.cs: Added parseassemblyuri
	  unit tests.

2009-09-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Add
	  tests for matching on punctuation.

2009-09-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Add MonoDevelop.Refactoring to the MONO_PATH so
	  we can run the tests.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
	  tests for complete empty match option / tests are now more
	  in line with the suggestions from mhutch.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Track
	  API changes.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
	  missing test for auto select property.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Projects.Gui: 

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
	  code completion window unit tests.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  some comments.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit tests for "Bug 538208 - Go to declaration not working
	  over a generic method...".

2009-09-07  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj: 

	* Mono.TextEditor.Tests.DefaultEditActions/DeleteActionTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveActionTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/SelectionActionTests.cs:
	* Mono.TextEditor.Tests.DefaultEditActions/CaretMoveActionsTest.cs: